--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://remixfx.github.io/mesto-react/",
+  "homepage": "https://remixfx.github.io/react-mesto-auth/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
